--- a/CrecheApp/Views/Home/Forum.cshtml
+++ b/CrecheApp/Views/Home/Forum.cshtml
@@ -36,11 +36,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.UserId)
             </td>
+           @if (@item.UserId.Equals(User.Identity.Name))
+           {
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CommentId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.CommentId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.CommentId">Delete</a>
             </td>
+           }
         </tr>
 }
     </tbody>
