--- a/CrecheApp/Views/Shared/_Layout.cshtml
+++ b/CrecheApp/Views/Shared/_Layout.cshtml
@@ -28,9 +28,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Forum">Forum</a>
                         </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reply">Reply</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ChildRegistration" asp-action="Registration">Child Registration</a>
                         </li>
+
+                         
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
