--- a/CrecheApp/Views/ChildRegistration/ChildDetails.cshtml
+++ b/CrecheApp/Views/ChildRegistration/ChildDetails.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<CrecheApp.Models.ChildModel>
+<h4>Your children's details'</h4>
+<hr>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<table class="table table-bordered table-info">
+    
     <thead>
         <tr>
             
@@ -33,11 +33,12 @@
                 @Html.DisplayFor(modelItem => item.IDNumber)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="EditChild" asp-route-id="@item.Id">Edit</a> 
+                
+                <a asp-action="DeleteChild" asp-route-id="@item.Id" asp-route-ParentId="@item.ParentId">Delete</a>
             </td>
         </tr>
 }
+        
     </tbody>
 </table>
