--- a/CrecheApp/Views/ChildRegistration/EditChild.cshtml
+++ b/CrecheApp/Views/ChildRegistration/EditChild.cshtml
@@ -1,16 +1,13 @@
 ﻿@model CrecheApp.Models.ChildModel
 
-<h4>Add a child</h4>
+<h4>Edit Child</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateChild">
+        <form asp-action="EditParent">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-                <input type="hidden" asp-for="Id"/>
-                <input type="hidden" asp-for="ParentId"/>
-               
-            
+            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ParentId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -27,16 +24,19 @@
                 <span asp-validation-for="IDNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-controller="ChildRegistration" asp-action="ParentDetails" asp-route-id=@Model.Id>Back to List</a>
+    <a asp-action="ChildDetails" asp-route-id="@Model.ParentId">Back to List</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
+
