--- a/CrecheApp/Views/Shared/_LoginPartial.cshtml
+++ b/CrecheApp/Views/Shared/_LoginPartial.cshtml
@@ -22,5 +22,9 @@ else
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark"  asp-controller="AdminController" asp-action="AdminIndex">Admin</a>
+        </li>
+        
 }
 </ul>
