Image and Secrets
Added a new banner image to web site and also changed connection string secrets

--- a/CrecheApp/Views/ChildRegistration/ChildDetails.cshtml
+++ b/CrecheApp/Views/ChildRegistration/ChildDetails.cshtml
@@ -2,7 +2,7 @@
 <h4>Your children's details'</h4>
 <hr>
 
-<table class="table table-bordered table-info">
+<table class="table table-bordered table-info col-md-4 col-sm-2">
     
     <thead>
         <tr>
