--- a/CrecheApp/Views/ChildRegistration/ParentDetails.cshtml
+++ b/CrecheApp/Views/ChildRegistration/ParentDetails.cshtml
@@ -7,7 +7,7 @@
 <h4>Check your Details</h4>
 <hr>
 <div>
-<table class="table table-bordered table-info">
+<table class="table table-bordered table-info col-sm-2 col-md-4">
     
             <input type = "hidden" value=model.Id ></input>
             <input type = "hidden" value=model.UserId></input>
