--- a/CrecheApp/Views/ChildRegistration/PaymentDetails.cshtml
+++ b/CrecheApp/Views/ChildRegistration/PaymentDetails.cshtml
@@ -3,7 +3,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table table-bordered table-info">
+<table class="table table-bordered table-info col-md-4 col-sm-2">
     <thead>
         <tr>
             
