--- a/CrecheApp/Views/ChildRegistration/Registration.cshtml
+++ b/CrecheApp/Views/ChildRegistration/Registration.cshtml
@@ -7,7 +7,7 @@
 <h4>Register Yourself</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-sm-2">
         <form asp-controller="ChildRegistration" asp-action="ParentDetails">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
              <input type="hidden" asp-for="Id"/> 
@@ -50,7 +50,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="HomeController" asp-action="Index">Back to List</a>
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
