--- a/CrecheApp/Views/ChildRegistration/EditChild.cshtml
+++ b/CrecheApp/Views/ChildRegistration/EditChild.cshtml
@@ -3,7 +3,7 @@
 <h4>Edit Child</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-sm-2">
         <form asp-action="EditParent">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
