--- a/CrecheApp/Views/Home/Forum.cshtml
+++ b/CrecheApp/Views/Home/Forum.cshtml
@@ -40,8 +40,7 @@
            {
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CommentId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CommentId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CommentId">Delete</a>
+                <a asp-action="DeleteComment" asp-route-id="@item.CommentId">Delete</a>
             </td>
            }
         </tr>
